tests/rosetta/out/Smalltalk/attractive-numbers.out
/tmp/attractive-numbers.st:14: parse error, expected ']'
